Summary of important user-visible changes for releases of the geometry package

===============================================================================
geometry-1.5.0   Release Date: 2012-04-16  Release Manager: Juan Pablo Carbajal
===============================================================================

* Added functions:
 - curveval.m: Evaluates a polynomial curve defined as a 2-by-N matrix.

 - curve2polyline.m: Converts a polynomial curve into a polyline by the adaptive
                     sampling method.

 - simplifypolyline.m:  Ramer-Douglas-Peucker algorithm to simplify polylines.

 - parametrize.m: Estimate a parametrization of a polygon/line based on the distance
                 between the points.

 - curvature.m: Estimation of the curvature of a polygon/line based on polynomial
                approximation.

 - reversePolygon.m and reversePolyline.m: reverse the orders of the points in
                                           of polygon/line.

 - supportFunction.m: Compute support function of a polygon.

* Changed functions:
 - distancePointEdge.m: Now the function computes the distance between all points
                        and all edges. A third optional argument provides
                        backward compatibility.

* Solved bugs:
 - simplifypolygon.m returned empty polygons when points are repeated, i.e when
  the polygon is not correctly formed.
 - Removed installation warnings.

===============================================================================
geometry-1.4.1   Release Date: 2012-03-24  Release Manager: Juan Pablo Carbajal
===============================================================================

* Renamed functions
 - Contents.m renamed to geom2d_Contents to avoid clashes.

* Deprecated functions
 - svgload, svgnormalize, svgpath2polygon: Use the methods in class svg.

* Bug fixes
 - @svg/path2polygon.m
 - Fix addpath/rmpath installation warnings
 - Fix octclip/src/Makefile