@@ -134,6 +134,7 @@ geometry >> Computational Geometry
  curveval
  curve2polyline
 2D Others
+ beltproblem
  bisector
  crackPattern2
  crackPattern
